google maps layer working

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,6 +10,7 @@
         require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>');
       </script>
     <% } %>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBA5inEV1RTOmoyo-fX575SRPfYTXt5MbQ"></script>
   </head>
   <body>
     <div id="app"></div>
